# ChatAGH_DataCollecting

./: README.md  generate_graph.ipynb  pyproject.toml  requirements.txt  scraper.py  scraping_pipeline.md  web_graph_eda.ipynb  web_graph_eda_2.ipynb
src/: indexing.ipynb  scraper.py  web_graph_eda.ipynb
web_scraping/: download_all_files.py  extract_links.py  graph_generator.py  run_scraping.py  scraper.py  urls_graph_generator.py
