[build-system]
  requires = ["setuptools>=69", "wheel"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "chatagh-data-collecting"
  version = "0.1.0"
  description = "Data collecting and indexing pipelines for Chat AGH project"
  readme = "README.md"
  requires-python = ">=3.11"
  authors = [{ name = "Chat AGH Team" }]

  dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "beautifulsoup4==4.13.5",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "h11==0.16.0",
    "html2text==2025.4.15",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-core==0.3.76",
    "langsmith==0.4.31",
    "narwhals==2.5.0",
    "networkx==3.5",
    "numpy==2.3.3",
    "orjson==3.11.3",
    "packaging==25.0",
    "pandas==2.3.2",
    "pdf2image==1.17.0",
    "pillow==11.3.0",
    "plotly==6.3.0",
    "pydantic==2.11.9",
    "pydantic_core==2.33.2",
    "pytesseract==0.3.13",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "zstandard==0.25.0"
  ]

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.1"
ruff = "^0.13.0"
pre-commit = "^3.7.0"

  [tool.poetry]
  package-mode = false
